hphp/hack/test/typecheck/ifc/ifc_inheritance2.php
<?hh
<<file:__EnableUnstableFeatures('ifc')>>

class A {
  <<__Policied("A")>>
  public function foo() : void {}
}

class B extends A {
  // Default public policy
  public function foo(): void {}

}
